	* lib/net/lib_inetpton.c:  Add inet_pton().
	* include/pthread.h:  Correct PTHREAD_MUTEX_INITIALIZER.
	* fs/fat/fs_fatfs.c:  Fix an error in the FAT statfs() implementation that
	  was causing some block counts to be reported incorrectly (reported by
	  David Sidrane).
	* drivers/ramlog.c:  Add a character driver that can substitute
	  for /dev/console and or be used for logging debug output when there
	  is no serial port available (such as when a Telnet console is used).
	* lib/stdio/lib_syslogstream:  Add a stream object that will be used to
	  re-direct all debug output to the RAM log if CONFIG_SYSLOG and
	  CONFIG_RAMLOG_SYSLOG are defined.
	* lib/misc/lib_dbg.c: Add an interface enabled with CONFIG_DEBUG_ENABLE that
	  can be used to turn debug output on and off.

6.16 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* drivers/sensors/qencoder.c and include/nuttx/sensors/qencoder.h:  Add an
	  implementation for a quadrature encoder upper half driver.
	* arch/arm/src/stm32/stm32_qencoder.c/.h:  Add a initial implementation of
	  a lower-half quadrature encoder driver for the STM32.  On initial check-in,
	  this is little more than a "skeleton" file.
	* Various files:  CAN ISO-11783 support contributed by Gary Teravskis.
	* net/recv.c and net/recvfrom.c: Correct a bug in return value:  The the peer
	  gracefully closes the connections, needs to return zero and not ENOTCONN.
	* arch/arm/src/stm32/stm32_eth.c:  Fix an error in the STM32 ethernet driver.
	  The received buffer size must be two bytes larger to account for the two byte
	  checksum that is appended to the packet.  Otherwise, the last two bytes of
	  real data in the packet will get clobbered.
	* arch/arm/src/stm32f40xx_dma.c:  The STM32 F4 DMA has (finally) been verified
	* arch/arm/src/stm32_sdio.c:  STM32 F4 SDIO DMA is now supported
	* configs/stm3240g-eval/nsh/defconfig: This configuration now supports SDIO
	  with DMA (see configs/stm3240g-eval/README.txt for some issues).